--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,9 @@
     "angular-bootstrap": "~0.11.0",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
-    "angular-socket-io": "~0.6.0"
+    "angular-socket-io": "~0.6.0",
+    "angular-translate": "~2.3.0",
+    "angular-translate-loader-static-files": "~2.3.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
